--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>2b班32番 Kai</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,8 +31,8 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        猫を移動させるプログラムを組み、移動に合わせて線を引くようにして、書くたびに線の色をかえ、<br>繰り返し移動させることで図形を描いた。
+       （50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
@@ -56,9 +56,9 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://kai00220115.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        学習した内容を説明する文章を<br>
+        <br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
