--- a/rep01.html
+++ b/rep01.html
@@ -34,8 +34,8 @@
         ネコを移動させるプログラムを組み、移動に合わせて線を引くようにして、書くたびに線の色をかえ、<br>繰り返し移動させることで図形を描いた。
         図形はいくつもの直線が交わり、円のような図形ができた。<br>
         2.感想<br>
-        プログラムを組んで、思ったようにネコが動いたとき、うれしいと思ったのと同時に楽しいと感じた。<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        プログラムを組んで、思ったようにネコが動いたとき、うれしいと思ったのと同時に楽しいと感じた。<br>円を描くようにプログラムしたとき、
+        きれいに一周するのではなく開始と終わりの座標が違っていたので、きれいに一周するようなプログラムをどうするとよいか考えた。<br>
       </div>
     </div>
 
@@ -44,10 +44,10 @@
       <img src="game.png" alt="りんごチャッチゲームの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
+        スタートの合図が出るとネコがスタート地点に移動するようにし、<br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
+        今回の授業で作ったゲームは、プレイする側にとっては簡単なゲームだが、プログラムを組むのは難しく感じた。<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
       </div>
     </div>
