--- a/rep01.html
+++ b/rep01.html
@@ -35,7 +35,7 @@
         図形はいくつもの直線が交わり、円のような図形ができた。<br>
         2.感想<br>
         プログラムを組んで、思ったようにネコが動いたとき、うれしいと思ったのと同時に楽しいと感じた。<br>円を描くようにプログラムしたとき、
-        きれいに一周するのではなく開始と終わりの座標が違っていたので、きれいに一周するようなプログラムをどうするとよいか考えた。<br>
+        きれいに一周するのではなく開始と終わりの座標が違っていたので、<br>きれいに一周するようなプログラムをどうするとよいか考えた。<br>
       </div>
     </div>
 
