--- a/rep01.html
+++ b/rep01.html
@@ -44,11 +44,11 @@
       <img src="game.png" alt="りんごチャッチゲームの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        スタートの合図が出るとネコがスタート地点に移動するようにし、<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スタートの合図が出るとネコがスタート地点に移動するようにし、リンゴが落ちてくるようにプログラムを組んだ。<br>落ちてきたリンゴに触れると、
+        リンゴがきえて、ポイントが表示されるようにした。<br>
         2.感想<br>
-        今回の授業で作ったゲームは、プレイする側にとっては簡単なゲームだが、プログラムを組むのは難しく感じた。<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        今回の授業で作ったゲームは、プレイする側にとっては簡単なゲームだが、プログラムを組むのは難しく感じた。<br>だから、ゲームを作ってる人は
+        すごいと感じたのと同時に、こんな風な仕事をできると<br>かっこいいし、面白いだろうなと思った。
       </div>
     </div>
 
