--- a/rep01.html
+++ b/rep01.html
@@ -48,7 +48,7 @@
         リンゴがきえて、ポイントが表示されるようにした。<br>
         2.感想<br>
         今回の授業で作ったゲームは、プレイする側にとっては簡単なゲームだが、プログラムを組むのは難しく感じた。<br>だから、ゲームを作ってる人は
-        すごいと感じたのと同時に、こんな風な仕事をできると<br>かっこいいし、面白いだろうなと思った。
+        すごいと感じたのと同時に、こんな風な仕事をできるとかっこいいし面白いだろうなと思った。<br>
       </div>
     </div>
 
