--- a/rep01.html
+++ b/rep01.html
@@ -58,11 +58,11 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://kai00220115.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        <br>
+        GitHubというwebサイトを使って、ホームページの<br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        普段見ているホームページはたくさんの文字が書かれており、このレポート以上に複雑になっているのだろうなとわかった。<br>今回はある程度できているもの
+        の上に内容をかいているが、一からするとなるととても大変なのだと思った。<br>
       </div>
     </div>
 
