--- a/rep01.html
+++ b/rep01.html
@@ -53,13 +53,14 @@
     </div>
 
     <div>
-      <h3>1-3 ホームページ作成</h3>
+      <h3>1-3 ホームページ作成</h3>して、
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://kai00220115.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        GitHubというwebサイトを使って、ホームページの<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        GitHubというwebサイトを使う。tmhrdoi/webを自分のGitHubにForkする。リポジトリのコピーができたから、<br>セーブしてHomePage完成。
+       index.htmlをクリックし編集した後、Commit changeをクリックし、自分のHPページをリロードする。<br>Add fileをクリックしUpload filesを
+        クリック。そして画像を選択し、ドラッグし緑のバーが消えるとUpload完了。<br>
         2.感想<br>
         普段見ているホームページはたくさんの文字が書かれており、このレポート以上に複雑になっているのだろうなとわかった。<br>今回はある程度できているもの
         の上に内容をかいているが、一からするとなるととても大変なのだと思った。<br>
