--- a/rep01.html
+++ b/rep01.html
@@ -53,7 +53,7 @@
     </div>
 
     <div>
-      <h3>1-3 ホームページ作成</h3>して、
+      <h3>1-3 ホームページ作成
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://kai00220115.github.io/web/">私のホームページ</a><br>
