--- a/rep02.html
+++ b/rep02.html
@@ -30,11 +30,12 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+       rep02.htmlというものを選択することで2週目のレポートを書くためのhtmlにとぶ。<br>
+      今回体験したことの画像をGitHubにアップロードする。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        一週目に比べて要領やどんな風にするとよいかがだいぶわかるようになった。しかし、<br>
+        一週目のレポートを書き終えてから、２，３日空いてしまうと画像の上げ方を少し忘れてしまったから<br>
+        復習しようと思った。<br>
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
       </div>
     </div>
