--- a/rep02.html
+++ b/rep02.html
@@ -30,7 +30,7 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-       rep02.htmlというものを選択することで2週目のレポートを書くためのhtmlにとぶ。<br>
+       rep02.htmlというものを選択することで2週目のレポートを書くためのhtmlにつながる。<br>
       今回体験したことの画像をGitHubにアップロードする。<br>
         2.感想<br>
         一週目に比べて要領やどんな風にするとよいかがだいぶわかるようになった。しかし、<br>
@@ -44,8 +44,9 @@
       <img src="ml.png" alt="TeachableMachineの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        まずTeachable Machineというサイトにとんで、画像プロジェクトでグー、チョキ、パーを<br>
+        それぞれ撮り、エクスポートするとリンクをコピーできるから、そのリンクをStretch3の画像分類モデルURL<br>
+        にコピーしたリンクを張る。そしたら、グーの時の動きなどをプログラムする。<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
@@ -57,7 +58,7 @@
       <img src="wroom.png" alt="metaWRの画像" width="50%" height="50%"> <img src="roblox.png" alt="ロブロックスの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
+        <br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
