--- a/rep02.html
+++ b/rep02.html
@@ -48,8 +48,8 @@
         それぞれ撮り、エクスポートするとリンクをコピーできるから、そのリンクをStretch3の画像分類モデルURL<br>
         にコピーしたリンクを張る。そしたら、グーの時の動きなどをプログラムする。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+      　じゃんけんというゲームを人工知能に教えるということは自分が思っている以上に難しくややこしいものだと<br>
+        いうことがわかった。<br>
       </div>
     </div>
 
