--- a/rep02.html
+++ b/rep02.html
@@ -49,7 +49,7 @@
         にコピーしたリンクを張る。そしたら、グーの時の動きなどをプログラムする。<br>
         2.感想<br>
       　じゃんけんというゲームを人工知能に教えるということは自分が思っている以上に難しくややこしいものだと<br>
-        いうことがわかった。自分のがプログラミング通りに動かなかったとき、焦ったがまず自分が選択したモードが間違っていると<br>
+        いうことがわかった。自分のがプログラミング通りに動かなかったとき、焦ったが自分の選択したモードが間違っていると<br>
         知ったとき、恥ずかしかった。<br>
       </div>
     </div>
