--- a/rep02.html
+++ b/rep02.html
@@ -59,8 +59,8 @@
       <img src="wroom.png" alt="metaWRの画像" width="50%" height="50%"> <img src="roblox.png" alt="ロブロックスの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-            
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+         WorkroomsとROBLOXというものを使ってVRの体験をした。Workroomsではメタバース空間での会議室を体験した。<br>
+        ROBLOXでは作成された屋外空間を体験した。
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
