--- a/rep02.html
+++ b/rep02.html
@@ -60,7 +60,7 @@
       <div>
         1.内容<br>
          WorkroomsとROBLOXというものを使ってVRの体験をした。Workroomsではメタバース空間での会議室を体験した。<br>
-        ROBLOXでは作成された屋外空間を体験した。
+        ROBLOXでは作成された屋外空間を体験した。<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
