--- a/rep02.html
+++ b/rep02.html
@@ -62,8 +62,8 @@
          WorkroomsとROBLOXというものを使ってVRの体験をした。Workroomsではメタバース空間での会議室を体験した。<br>
         ROBLOXでは作成された屋外空間を体験した。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        初めてVRを体験したが、本当にその場にいるような感覚になったため面白かった。またこの技術が進歩し続けると、<br>
+       現実との区別がつかなくなりそうだと感じた。楽しかったので、このようなものをつくれるようになりたいと思った。<br>
       </div>
     </div>
 
