--- a/rep03.html
+++ b/rep03.html
@@ -33,7 +33,7 @@
         1.内容<br>
         A-Frameのテンプレートをコピーし、Webプログラミング道場のコーディングエリアにペーストする。<br>
         positionに好きな数字を入れることで位置を指定し、rotationで向き、radiusで球や円柱の半径を決め、<br>
-        widthで幅、heightで高さを指定する。
+        widthで幅、heightで高さを指定する。<br>
         2.感想<br>
         位置を指定するとき、x座標やy座標を使って指定するため自分が置きたい位置に調整するのが難しかった。<br>
         色の指定も数値を入れて指定するため難しかった。そのため、自分が想像していた形に近いものをつくれた時ときうれしかった。<br>
@@ -45,7 +45,7 @@
       <a href="https://kai00220115.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
+        Webプログラミング道場を使った。<br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
