--- a/rep03.html
+++ b/rep03.html
@@ -45,11 +45,11 @@
       <a href="https://kai00220115.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
-        Webプログラミング道場を使った。<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        Webプログラミング道場を使ってブラウザでのプログラミングを学んだ。まず伝言板に書き込めるようにプログラムする。<br>
+        このとき空白入力ができてしまうため、入力内容がなにも書かれていなかったとき入力するように警告するプログラムをする。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        授業で伝言板に空白入力ができないようにプログラムをしたが、スペースを打つと空白入力のように何も表示されなくなり、<br>
+        課題がないように見えてもバグおきてしまうため奥が深いと感じた。<br>
       </div>
     </div>
 
@@ -58,7 +58,7 @@
       <img src="interactive.png" alt="VRゲームの画像" width="20%" height="20%"><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
+        A-Freamを使ってインタラクティブなWebVRプログラムを体験した。<br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
