--- a/rep03.html
+++ b/rep03.html
@@ -58,10 +58,10 @@
       <img src="interactive.png" alt="VRゲームの画像" width="20%" height="20%"><br>
       <div>
         1.内容<br>
-        A-Freamを使ってインタラクティブなWebVRプログラムを体験した。<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        A-Freamを使ってインタラクティブなWebVRプログラムを体験した。メッシュ柄の空間で白い球を飛ばす<br>
+      　シューティングゲームのようなものをした。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
+        二週目に行った<br> 
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
       </div>
     </div>
