--- a/rep03.html
+++ b/rep03.html
@@ -61,8 +61,8 @@
         A-Freamを使ってインタラクティブなWebVRプログラムを体験した。メッシュ柄の空間で白い球を飛ばす<br>
       　シューティングゲームのようなものをした。<br>
         2.感想<br>
-        二週目に行った<br> 
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        二週目に行ったWorkroomやROBLOXのような空間をつくるとなると難しそうだなと感じた。<br> 
+        どう操作するとよいのかわからず色々して、白い空間に出た時は驚いた。<br>
       </div>
     </div>
 
